# Linkr

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  LICENCE-data  README.md  package-lock.json  package.json
.claude/skills/concept-mapping/: SKILL.md  reference.md
.claude/skills/create-plugin/: SKILL.md  reference.md
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/v1/routes/: auth.py  health.py  projects.py  setup.py
apps/api/app/core/: database.py  deps.py  logging.py  security.py
apps/api/app/models/: __init__.py  dataset.py  plugin.py  project.py  user.py
apps/api/app/schemas/: auth.py
apps/web/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.json  vite-plugin-seed-hashes.ts  vite.config.ts
apps/web/public/data/: etl-comparison-notes.md  fix-etl-scripts.py  generate_icu_data.py  icu-activity-dataset.json  mimic-iv-concept-mappings.json  mimic-iv-custom-mappings.json  mimic-iv-etl-scripts.json
apps/web/scripts/: postinstall.mjs
apps/web/src/: index.css  main.tsx
apps/web/src/app/: App.tsx  AuthGate.tsx  ProjectGuard.tsx  WorkspaceGuard.tsx
apps/web/src/components/: PluginPicker.tsx
apps/web/src/hooks/: use-attachments.ts  use-browser-metrics.ts  use-debounced-value.ts  use-project-tree.ts  use-readme-attachments.ts  use-shortcuts.ts  use-wiki-attachments.ts
apps/web/src/lib/: api-client.ts  cell-executor.ts  dataset-utils.ts  demo-seed.ts  (+17 more)
docker/: Dockerfile.api  Dockerfile.web  docker-compose.yml  nginx.conf
docs/: health-dcat-ap.md  shadcn-components.md  vision-roadmap.md
(+478 files in other folders)
